--- a/index.html
+++ b/index.html
@@ -3,39 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enterprise Music Player</title>
+    <title>Simple Audio Player</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="music-player">
-        <h1>Music Player</h1>
-        <div class="track-info">
-            <div>
-                <h2 id="track-title">Track Title</h2>
-                <h3 id="track-artist">Artist Name</h3>
-            </div>
-        </div>
-        <audio id="audio" preload="metadata"></audio>
-        <div class="controls">
-            <button id="prev" class="control-button" aria-label="Previous Track">Prev</button>
-            <button id="play" class="control-button" aria-label="Play/Pause Track">Play</button>
-            <button id="next" class="control-button" aria-label="Next Track">Next</button>
-            <button id="mute" class="control-button" aria-label="Mute/Unmute Track">Mute</button>
-        </div>
-        <div class="track-duration">
-            <span id="current-time">0:00</span> / <span id="total-duration">0:00</span>
-        </div>
+    <div class="audio-player">
+        <audio id="audio" src="audio-file.mp3"></audio>
+        <button id="play-pause">Play</button>
         <div class="progress-container">
-            <label for="progress" class="visually-hidden">Progress</label>
-            <input type="range" id="progress" value="0" step="1" aria-label="Track Progress">
+            <div id="progress"></div>
         </div>
-        <div class="volume-container">
-            <label for="volume">Volume:</label>
-            <input type="range" id="volume" value="100" step="1" max="100" aria-label="Volume Control">
-        </div>
-        <div id="error-message" class="error-message" aria-live="assertive"></div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
